--- a/src/CardList/style.css
+++ b/src/CardList/style.css
@@ -1,9 +1,7 @@
 .container {
-  max-width: 30rem;
+  display: flex;
+  flex-wrap: wrap;
   margin: 1rem auto;
-  background-color: grey;
-  opacity: 0.6;
-  border-radius: 20px;
 }
 
 .card {
