--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,11 @@
   box-sizing: border-box;
 }
 
+body {
+  max-width: 1200px;
+  margin: auto;
+}
+
 .navbar {
   display: flex;
   justify-content: flex-start;
