--- a/src/FilterCategories/FilterCategories.css
+++ b/src/FilterCategories/FilterCategories.css
@@ -6,15 +6,14 @@
   margin-left: auto;
   display: flex;
   text-align: center;
-  color: #000000;
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 24px;
 }
 
-.info-category {
+select {
+  padding: 10px;
+  border-radius: 10px;
+  background: rgba(152, 191, 173, 0.35);
+  border: none;
+  padding: 2rem;
   text-align: center;
   color: #000000;
   font-family: Montserrat;
@@ -22,8 +21,4 @@
   font-weight: normal;
   font-size: 20px;
   line-height: 24px;
-  background: rgba(152, 191, 173, 0.35);
-  border-radius: 9px;
-  padding: 2rem;
 }
-
