repaired bug cards, same height

--- a/src/CardList/style.css
+++ b/src/CardList/style.css
@@ -1,46 +1,7 @@
-.container {
+.containerCards {
   display: flex;
   flex-wrap: wrap;
   margin: 1rem auto;
-}
-
-
-.card__category {
-  display: flex;
   justify-content: center;
-}
-
-.category__pin {
-  width: 2rem;
-  float: right;
-  margin-left: 10px;
-}
-
-.card__text,
-.card__name {
-  color: white;
-  padding: 1rem;
-  margin: 0;
-  line-height: 150%;
-  text-align: center;
-}
-
-.card__name {
-  font-weight: bold;
-  font-size: 20px;
-}
-
-.category__web,
-.category__map {
-  color: white;
-  width: 3rem;
-  height: 3rem;
-  margin: 10px;
-}
-
-.card__icons {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  transition: all 0.3s ease;
+  align-items: center;
 }
