--- a/src/Card/style.css
+++ b/src/Card/style.css
@@ -12,13 +12,15 @@ p.card__text {
   border-radius: 20px;
   width: 30rem;
   margin: 1rem auto;
- }
+  min-height: 300px;
+}
 
 .card__meTime {
   background-color: #d83957;
   border-radius: 20px;
   width: 30rem;
   margin: 1rem auto;
+  min-height: 300px;
 }
 
 .card__accomodation {
@@ -26,6 +28,7 @@ p.card__text {
   border-radius: 20px;
   width: 30rem;
   margin: 1rem auto;
+  min-height: 300px;
 }
 
 .card__restaurant {
@@ -33,6 +36,7 @@ p.card__text {
   border-radius: 20px;
   width: 30rem;
   margin: 1rem auto;
+  min-height: 300px;
 }
 
 .card__body {
@@ -73,4 +77,5 @@ p.card__text {
   flex-direction: row;
   justify-content: center;
   transition: all 0.3s ease;
+  bottom: 0;
 }
