--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,26 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* hamburger menu styles */
+
+.hamburger {
+  display: block;
+  width: 40px;
+  height: 40px;
+  position: relative;
+  border: none;
+  background-color: transparent;
+  font-size: 48px;
+  color: black;
+  padding: 0;
+  line-height: 0;
+  margin: 0;
+  margin-left: auto;
+  outline: none;
+}
+
+.hamburger:hover {
+  background-color: transparent;
+  outline: none;
+}
