--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -35,7 +35,7 @@
   line-height: 24px;
 }
 
-/* @media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .mainTitle {
     font-size: 96px;
     line-height: 111px;
@@ -50,7 +50,7 @@
     line-height: 14px;
     padding-top: 20px;
   }
-} */
+}
 
 /*
 position: absolute;
