--- a/src/FilterCategories/FilterCategories.css
+++ b/src/FilterCategories/FilterCategories.css
@@ -42,3 +42,14 @@
   border-radius: 9px;
   padding: 1rem;
 }
+
+.delete-img {
+  width: 35px;
+  padding-left: 5%;
+}
+
+.delete-img:hover,
+.category-choice:hover,
+.info-category:hover {
+  cursor: pointer;
+}
