--- a/src/FilterCountries/FilterCountries.css
+++ b/src/FilterCountries/FilterCountries.css
@@ -10,18 +10,15 @@ html {
 
 .container {
   margin-left: auto;
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 24px;
-  display: flex;
   justify-content: center;
+  display: flex;
   align-items: center;
-  text-align: center;
-  color: #000000;
+}
+
+.country-info {
   background: rgba(152, 191, 173, 0.35);
   border-radius: 9px;
+  margin-bottom: 5%;
 }
 
 .country-holder {
