--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -80,6 +80,19 @@ button.map-btn:focus {
   height: 94px;
 }
 
+.container {
+  margin-left: auto;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 24px;
+  display: flex;
+  text-align: center;
+  color: #000000;
+  flex: 1 1 30%;
+}
+
 @media screen and (min-width: 768px) {
   .filters {
     display: flex;
