--- a/src/AddNew/style.css
+++ b/src/AddNew/style.css
@@ -79,7 +79,44 @@ a {
   text-decoration: none;
 }
 
+input[type='text'],
+input[type='url'],
+input[type='number'],
+select {
+  margin: 0 auto 0 auto;
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type='submit'] {
+  width: 100%;
+  background-color: #4caf50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.form {
+  border-radius: 5px;
+  background-color: #f0cfcf;
+  padding: 20px;
+}
+
 button {
+  width: 100%;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
   padding: 10px;
   margin: 10px;
   font-family: 'Montserrat', sans-serif;
