--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,34 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 /* navbar styles */
+.topbar_container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.LogoImg {
+  width: 100px;
+  background-size: contain;
+  margin: 10px;
+}
 
 .navbar {
   display: flex;
-  justify-content: flex-start;
+  flex-direction: column;
+  align-items: flex-end;
+  margin: 5px;
 }
 
 .menu {
-  display: flex;
-  list-style: none;
+  display: block;
   margin: 1px;
-  margin-left: 40px;
-  padding: 10px 0;
+  border-bottom: 1px solid transparent;
+  text-decoration: none;
+  text-transform: uppercase;
+  list-style: none;
   font-size: 14px;
+  text-align: right;
 }
 
 .menu a {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  padding: 5px 15px;
-  border-radius: 10px;
   color: black;
 }
 
@@ -41,65 +36,68 @@ code {
   background-color: #ffcccc;
 }
 
-.LogoImg {
-  margin: 10px;
-  width: 150px;
-}
-
-/* hamburger menu styles */
-
-.hamburger {
+.LogoMenu {
+  width: 1rem;
+  height: 1rem;
   display: block;
-  width: 40px;
-  height: 40px;
-  position: relative;
-  border: none;
-  background-color: transparent;
-  font-size: 48px;
-  color: black;
   padding: 0;
-  line-height: 0;
-  margin: 0;
-  margin-left: auto;
-  outline: none;
+  cursor: pointer;
 }
 
-.hamburger:hover {
-  background-color: transparent;
+button.hamburger {
   outline: none;
+  border: none;
+  background-color: white;
+  padding: 0px;
 }
 
-@media screen and (max-width: 400px) {
+button.hamburger:hover {
+  background-color: white;
+}
+
+@media screen and (min-width: 768px) {
   .LogoImg {
-    width: 100px;
+    width: 150px;
+    background-size: contain;
+    margin: 10px;
   }
-  .LogoMenu {
-    display: block;
+
+  .navbar {
+    flex-direction: row;
+    margin: 10px;
   }
 
   .menu {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    margin: 10px;
+    border-bottom: 1px solid transparent;
+    text-decoration: none;
+    text-transform: uppercase;
     list-style: none;
-    margin: 1px;
-    padding: 10px 0;
-    font-size: 12px;
+    font-size: 16px;
+    text-align: center;
+  }
+
+  ul.menu {
+    padding: 0px;
+  }
+
+  .menu a {
+    color: black;
+    padding: 10px;
+  }
+
+  .menu a:hover {
+    background-color: #ffcccc;
+  }
+
+  .LogoMenu {
+    width: 2rem;
+    height: 2rem;
+    display: block;
+    padding: 0;
+    cursor: pointer;
   }
 }
 
-/* @media screen and (min-width: 768px) {
-  .mainTitle {
-    font-size: 96px;
-    line-height: 111px;
-  }
-  .secondTitle {
-    font-size: 40px;
-    line-height: 20px;
-    padding: 20px;
-  }
-  .thirdTitle {
-    font-size: 24px;
-    line-height: 14px;
-    padding-top: 20px;
-  }
-} */
