test a css card

--- a/src/Card/style.css
+++ b/src/Card/style.css
@@ -2,11 +2,6 @@
   flex: 1 1 50%;
 }
 
-p.card__text {
-  font-size: 14px;
-  padding: 10px;
-}
-
 .card__mustDo,
 .card__meTime,
 .card__accomodation,
@@ -77,7 +72,12 @@ p.card__text {
 
 .card__name {
   font-weight: bold;
-  font-size: 20px;
+  font-size: 14px;
+}
+
+.card__text {
+  font-size: 12px;
+  padding: 10px;
 }
 
 .category__web,
@@ -105,4 +105,14 @@ p.card__text {
     width: 30rem;
     min-height: 300px;
   }
+}
+
+p.card__text {
+  font-size: 14px;
+  padding: 10px;
+}
+
+.card__name {
+  font-weight: bold;
+  font-size: 20px;
 }
