npm run build, change of a to button, commented of button on about/style.css

--- a/src/About/style.css
+++ b/src/About/style.css
@@ -105,12 +105,11 @@ a {
   text-decoration: none;
 }
 
-button {
+/*button {
   padding: 10px;
   margin: 10px;
   font-family: 'Montserrat', sans-serif;
-}
-
+}*/
 button:hover {
   background-color: #98bfad;
 }
