vylepseni extra karticky, roll out categories a ikonek

--- a/src/AddNew/style.css
+++ b/src/AddNew/style.css
@@ -40,6 +40,7 @@ p {
 .icon-bar {
   text-align: center;
   margin: 10px;
+  z-index: 2;
 }
 /* Style the social media icons with color, if you want */
 .icon-bar a:hover {
