social media icons changed

--- a/src/About/style.css
+++ b/src/About/style.css
@@ -42,7 +42,7 @@ p {
 }
 /* Style the social media icons with color, if you want */
 .icon-bar a:hover {
-  background-color: #98bfad;
+  background-color: white;
 }
 
 h1 {
