--- a/src/AddNew/style.css
+++ b/src/AddNew/style.css
@@ -44,7 +44,7 @@ p {
 }
 /* Style the social media icons with color, if you want */
 .icon-bar a:hover {
-  background-color: #98bfad;
+  background-color: transparent;
 }
 
 h1 {
