--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -80,8 +80,8 @@ button.map-btn:focus {
   font-family: Montserrat;
   font-style: normal;
   font-weight: normal;
-  font-size: 20px;
-  line-height: 24px;
+  font-size: 12px;
+  line-height: 15px;
   display: flex;
   text-align: center;
   color: #000000;
@@ -131,5 +131,9 @@ button.map-btn:focus {
     width: 25px;
     right: 3%;
     top: 12px;
+  }
+  .container {
+    font-size: 20px;
+    line-height: 24px;
   }
 }
