--- a/src/FilterCategories/FilterCategories.css
+++ b/src/FilterCategories/FilterCategories.css
@@ -5,23 +5,25 @@
 .category-data {
   position: relative;
   margin-bottom: 5%;
+  width: 186px;
+  min-height: 36px;
 }
 
 .info-category {
-  min-width: 250px;
-  padding: 10px;
-  border-radius: 10px;
+  padding: 11px;
+  border-radius: 20px;
   background: rgba(152, 191, 173, 0.35);
   border: none;
-  padding: 2rem;
   text-align: center;
   color: #000000;
   font-family: Montserrat;
   font-style: normal;
   font-weight: normal;
-  font-size: 20px;
-  line-height: 24px;
+  font-size: 12px;
+  line-height: 15px;
   position: relative;
+  display: flex;
+  justify-content: center;
 }
 
 .category-list {
@@ -40,7 +42,7 @@
 }
 
 .delete-img {
-  width: 35px;
+  width: 25px;
   padding-left: 5%;
 }
 
@@ -49,3 +51,38 @@
 .info-category:hover {
   cursor: pointer;
 }
+
+@media screen and (min-width: 768px) {
+  .info-category {
+    font-size: 20px;
+    line-height: 24px;
+    padding: 2rem;
+    border-radius: 10px;
+    min-width: 250px;
+  }
+  .delete-img {
+    width: 35px;
+  }
+  .category-list {
+    min-width: 250px;
+  }
+}
+
+/*
+.info-category {
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.category-data {
+    width: 186px;
+    min-height: 36px;
+}
+
+.info-category {
+  no mid width 
+  border-radius: 20px;
+}
+
+
+  */
