--- a/src/Card/style.css
+++ b/src/Card/style.css
@@ -71,6 +71,7 @@
   width: 2rem;
   float: right;
   margin: 10px;
+  margin-right: 30px;
 }
 
 .card__text,
@@ -126,5 +127,8 @@
   .card__name {
     font-weight: bold;
     font-size: 20px;
+  }
+  .category__pin {
+    margin: 10px;
   }
 }
