--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 .topbar_container {
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: flex-start;
 }
 
 .LogoImg {
