--- a/src/FilterCountries/FilterCountries.css
+++ b/src/FilterCountries/FilterCountries.css
@@ -27,6 +27,10 @@ html {
   border-radius: 20px;
 }
 
+.country-choice:hover {
+  cursor: pointer;
+}
+
 .country-selected {
   padding-top: 2%;
   display: flex;
